--- a/Style.css
+++ b/Style.css
@@ -6,7 +6,12 @@ table,th,tr,td {
     padding: 5px;
 }
 
-p.task2 {
-     font-weight: bold;
+.center {
+    text-align: center;
+}
 
-    
+#page {
+    border: 2px solid #cbc9c9;
+    width: 20%;
+    padding: 5px;
+}
