Tasks Done For Day Three

--- a/task_19_6/style2.css
+++ b/task_19_6/style2.css
@@ -36,3 +36,22 @@
     background-color: green;
 }
 
+.seven {
+    color: blue;
+}
+
+.eight {
+    background-color: blue;
+
+}
+
+.list2 {
+    color: blue;
+    list-style-type: circle;
+}
+
+.list3 {
+    color: green;
+    list-style-type: none;
+}
+
