Tasks Done For For Today

--- a/task_19_6/style4.css
+++ b/task_19_6/style4.css
@@ -14,7 +14,7 @@ p {
     position: relative;
 }
 img{
-    position: absolute;
+    position: fixed;
     top: 45px;
-    left: 400px;
+    left: 300px;
 }
