--- a/task_19_6/style4.css
+++ b/task_19_6/style4.css
@@ -10,8 +10,14 @@
 .anchor {
     position: relative;
 }
- img{
+
+ .img{
     position: absolute;
-    top: 45px;
-    right:0;
-   
+    width: 200px;
+    height: 300px;
+    top: 15px;
+    right: 0px;
+    background-color: white;
+    background-image: url(../Resources/TopHat.png);
+    background-size: 200px 200px;
+ }
